--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header class="header link">
-        <div class="container portfolio-container">
+        <div class="container header-container">
         <nav class="header-navigation" >
-        <a  class="header-logo link" href="./index.html">Web<span class="header-span link">Studio</span>
+        <a  class="header-logo link" href="./portfolio.html">Web<span class="header-span link">Studio</span>
         </a>
         <ul class="header-menu list" >
             <li class="header-title-item"><a class="header-text-link link" href="./index.html">Studio</a></li>
@@ -29,10 +29,9 @@
                 <li class="header-soc-item link"><a class="header-soc-title link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-    </div>
+        </div>
 </header>
 <main>
-    <div class="container upport-container">
 <section class="advantages">
     <div class="container main-container">
         <h1 class="visually-hidden">Projects</h1>
@@ -47,7 +46,7 @@
     <li class="portfolio-img-item">
         <a href="/" class="link">
             <img src="./images/bankapp.jpg" alt="bank-app" width="360">
-        <div class="pages-upport">
+        <div class="picture-text">
             <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
             <p class="portfolio-text">App</p>
         </div>
@@ -56,7 +55,7 @@
     <li class="portfolio-img-item">
         <a href="/" class="link">
             <img src="./images/scanner.jpg" alt="scaner" width="360">
-        <div class="pages-upport">
+            <div class="picture-text">
             <h2 class="portfolio-subtitle">Cashless Payment</h2>
             <p class="portfolio-text">Marketing</p>
         </div>
@@ -65,7 +64,7 @@
     <li class="portfolio-img-item">
         <a href="/" class="link">
             <img src="./images/laptopphone.jpg" alt="laptop-phone" width="360">
-        <div class="pages-upport">
+        <div class="picture-text">
             <h2 class="portfolio-subtitle">Meditation App</h2>
             <p class="portfolio-text">App</p>
         </div>
@@ -74,53 +73,67 @@
         <li class="portfolio-img-item">
             <a href="/" class="link">
                 <img src="./images/carstreering.jpg" alt="car-streering" width="360">
+            <div class="picture-text">
                 <h2 class="portfolio-subtitle">Taxi Service</h2>
                 <p class="portfolio-text">Marketing</p>
+            </div>
             </a>
         </li>
         <li class="portfolio-img-item">
             <a href="/" class="link">
                 <img src="./images/ipfone.jpg" alt="iphone" width="360">
+            <div class="picture-text">
                 <h2 class="portfolio-subtitle">Screen Illustrations</h2>
                 <p class="portfolio-text">Design</p>
+            </div>
             </a>
         </li>
         <li class="portfolio-img-item">
             <a href="/" class="link">
                 <img src="./images/girlsinging.jpg" alt="girl-singing" width="360">
+            <div class="picture-text">
                 <h2 class="portfolio-subtitle">Online Courses</h2>
                 <p class="portfolio-text">Marketing</p>
+            </div>
             </a>
         </li>
         <li class="portfolio-img-item">
             <a href="/" class="link">
                 <img src="./images/instagram.jpg" alt="instagram" width="360">
+            <div class="picture-text">
                 <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
                 <p class="portfolio-text">Design</p>
+            </div>
             </a>
         </li>
         <li class="portfolio-img-item">
             <a href="/" class="link">
                 <img src="./images/originalfood.jpg" alt="original-food" width="360">
+            <div class="picture-text">
                 <h2 class="portfolio-subtitle">Organic Food</h2>
                 <p class="portfolio-text">Web Site</p>
+            </div>
             </a>
         </li>
         <li class="portfolio-img-item">
             <a href="/" class="link">
                 <img src="./images/freshcoffe.jpg" alt="fresh-coffe" width="360">
+                <div class="picture-text">
                 <h2 class="portfolio-subtitle">Fresh Coffee</h2>
                 <p class="portfolio-text">Web Site</p>
+            </div>
             </a>
         </li>
     </ul>
-</section>
 </div>
+</section>
 </main>
 <footer class="web-background link">
+    <div class="container footer-container">
     <a href="./portfolio.html" class="web-title link">Web<span class="web-item-title">Studio</span>
     </a>
     <p class="web-item-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div>
 </footer>
 </body>
 </html>
