--- a/portfolio.html
+++ b/portfolio.html
@@ -195,6 +195,19 @@
                 </li>
             </ul>
         </div>
+        <div class="container sub-container">
+            <p class="subs-text">Subscribe</p>
+            <form action="#" class="subs-box">
+                <label class="sub-label">
+                    <input name="user-subscribe" type="email" placeholder="E-mail" class="subs-input">
+                </label>
+                <button class="subs-btn" type="submit">Subscribe
+                    <svg class="subs-icons" width="24" height="24">
+                        <use href="./images/icon.telegram.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
     </div>
     </footer>
 </body>
