--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="products">
         <div class="container">
         <h2 class="products-title">What are we doing</h2>
-        <ul class="products list">
+        <ul class="products-list">
             <li class="products-item"><img src="./images/computer.jpg" alt="computer" width="360"></li>
             <li class="products-item"><img src="./images/more.mobile.phones.jpg" alt="more mobile phones" width="360"></li>
             <li class="products-item"><img src="./images/mobile.phone.jpg" alt="mobile phones" width="360"></li>
