--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </section>
     <section id="our-team" class="team list">
-    <div class="container team-container">
+    <div class="container">
         <h2 class="team-title list">Our Team</h2>
             <ul class="team-list list">
                 <li class="team-item list">
